[package]
name = "my_wasm_demo"
publish = false

version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
wasm-bindgen = "0.2.61"
winit = "0.28.6"
log = "0.4"
console_log = "1.0"
cargo-run-wasm = "0.3.2"
wasm-bindgen-futures = "0.4"
vello = { path = "../../" }

[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    "AddEventListenerOptions",
    'CssStyleDeclaration',
    'BeforeUnloadEvent',
    'Document',
    'DomRect',
    'Element',
    'Event',
    "EventListenerOptions",
    'EventTarget',
    'FocusEvent',
    'HtmlCanvasElement',
    'HtmlElement',
    'KeyboardEvent',
    'MediaQueryList',
    'MediaQueryListEvent',
    'MouseEvent',
    'Node',
    'PointerEvent',
    'Window',
    'WheelEvent'
]

[build-dependencies]
cfg_aliases = "0.1.1"

[lib]
name = "my_wasm_demo"
crate-type = ["cdylib"]
