[package]
name = "my_winit_demo"
publish = false

version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
log = "0.4"
winit = "0.28.6"
pollster = "0.3"
futures-intrusive = "0.5.0"
png = "0.17"
wgpu = { workspace = true }
vello = { path = "../../" }
